@@ -1,26 +1,30 @@
 package com.taotao.cloud.payment.biz.daxpay.core.channel.wechat.service;
 
+import cn.bootx.platform.common.core.exception.BizException;
 import cn.bootx.platform.common.core.exception.DataNotExistException;
 import cn.bootx.platform.common.core.rest.PageResult;
 import cn.bootx.platform.common.core.rest.dto.KeyValue;
 import cn.bootx.platform.common.core.rest.param.PageParam;
 import cn.bootx.platform.common.mybatisplus.util.MpUtil;
+import cn.bootx.platform.daxpay.code.pay.PayChannelEnum;
 import cn.bootx.platform.daxpay.code.paymodel.WeChatPayWay;
 import cn.bootx.platform.daxpay.core.channel.wechat.dao.WeChatPayConfigManager;
 import cn.bootx.platform.daxpay.core.channel.wechat.entity.WeChatPayConfig;
+import cn.bootx.platform.daxpay.core.merchant.dao.MchAppPayConfigManager;
+import cn.bootx.platform.daxpay.core.merchant.entity.MchAppPayConfig;
+import cn.bootx.platform.daxpay.core.merchant.service.MchAppService;
 import cn.bootx.platform.daxpay.dto.channel.wechat.WeChatPayConfigDto;
 import cn.bootx.platform.daxpay.exception.payment.PayFailureException;
 import cn.bootx.platform.daxpay.param.channel.wechat.WeChatPayConfigParam;
-import org.dromara.hutool.core.bean.BeanUtil;
-import org.dromara.hutool.core.bean.copier.CopyOptions;
-import org.dromara.hutool.core.collection.CollUtil;
+import cn.hutool.core.bean.BeanUtil;
+import cn.hutool.core.bean.copier.CopyOptions;
+import cn.hutool.core.collection.CollUtil;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 /**
@@ -35,15 +39,27 @@ import java.util.stream.Collectors;
 public class WeChatPayConfigService {
 
     private final WeChatPayConfigManager weChatPayConfigManager;
+    private final MchAppService mchAppService;
+    private final MchAppPayConfigManager mchAppPayConfigManager;
 
     /**
      * 添加微信支付配置
      */
     @Transactional(rollbackFor = Exception.class)
     public void add(WeChatPayConfigParam param) {
+        // 是否有管理关系判断
+        if (mchAppService.checkMatch(param.getMchCode(), param.getMchAppCode())) {
+            throw new BizException("应用信息与商户信息不匹配");
+        }
+
         WeChatPayConfig weChatPayConfig = WeChatPayConfig.init(param);
-        weChatPayConfig.setActivity(false);
         weChatPayConfigManager.save(weChatPayConfig);
+        // 保存关联关系
+        MchAppPayConfig mchAppPayConfig = new MchAppPayConfig().setAppCode(weChatPayConfig.getMchAppCode())
+                .setConfigId(weChatPayConfig.getId())
+                .setChannel(PayChannelEnum.WECHAT.getCode())
+                .setState(weChatPayConfig.getState());
+        mchAppPayConfigManager.save(mchAppPayConfig);
     }
 
     /**
@@ -73,35 +89,6 @@ public class WeChatPayConfigService {
     }
 
     /**
-     * 设置启用的支付宝配置
-     */
-    @Transactional(rollbackFor = Exception.class)
-    public void setUpActivity(Long id) {
-        WeChatPayConfig weChatPayConfig = weChatPayConfigManager.findById(id)
-            .orElseThrow(() -> new PayFailureException("微信支付配置不存在"));
-        if (Objects.equals(weChatPayConfig.getActivity(), Boolean.TRUE)) {
-            return;
-        }
-        weChatPayConfigManager.removeAllActivity();
-        weChatPayConfig.setActivity(true);
-        weChatPayConfigManager.updateById(weChatPayConfig);
-    }
-
-    /**
-     * 清除启用状态
-     */
-    @Transactional(rollbackFor = Exception.class)
-    public void clearActivity(Long id) {
-        WeChatPayConfig weChatPayConfig = weChatPayConfigManager.findById(id)
-            .orElseThrow(() -> new PayFailureException("微信支付配置不存在"));
-        if (Objects.equals(weChatPayConfig.getActivity(), Boolean.TRUE)) {
-            return;
-        }
-        weChatPayConfig.setActivity(false);
-        weChatPayConfigManager.updateById(weChatPayConfig);
-    }
-
-    /**
      * 获取
      */
     public WeChatPayConfigDto findById(Long id) {
@@ -115,7 +102,7 @@ public class WeChatPayConfigService {
         return WeChatPayWay.getPayWays()
             .stream()
             .map(e -> new KeyValue(e.getCode(), e.getName()))
-            .toList();
+            .collect(Collectors.toList());
     }
 
 }
